--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "init": "^0.1.2",
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.1",
+    "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
