--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.1",
     "multer": "^1.4.4",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "query-to-mongo": "^0.10.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
