--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-list-endpoints": "^6.0.0",
     "http-errors": "^2.0.0",
     "init": "^0.1.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.1",
     "multer": "^1.4.4",
