--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "atob": "^2.1.2",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.28.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-list-endpoints": "^6.0.0",
@@ -18,6 +19,8 @@
     "mongoose": "^6.2.1",
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
+    "passport": "^0.5.2",
+    "passport-google-oauth20": "^2.0.0",
     "query-to-mongo": "^0.10.1"
   },
   "devDependencies": {
